--- a/SE_UIUX.html
+++ b/SE_UIUX.html
@@ -5,101 +5,126 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Simple Search Engine</title>
   <style>
-    body {
+    html, body {
+      overflow: hidden; /* Prevent scrolling */
+      height: 100%;
+      margin: 0;
       font-family: Arial, sans-serif;
+      background-color: #f8f9fa;
+      text-align: center;
       display: flex;
       flex-direction: column;
+    }
+
+    .container {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
       align-items: center;
-      justify-content: center;
-      height: 100vh;
-      margin: 0;
-      background-color: #f8f9fa;
+      height: 100%;
+      width: 100%;
     }
 
     .header {
       width: 100%;
       background-color: #d32f2f;
       color: white;
-      padding: 70px;
+      padding: 3%;
       text-align: center;
       font-size: 1.5rem;
       font-family: 'Arial', cursive;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+    }
+
+    .header img {
       position: absolute;
-      top: 0;
+      top: 3%;
+      left: 3%;
+      width: auto;
+      height: 100%; /* Ensure the full image is visible */
+      max-height: 70%; /* Adjust max-height as needed */
+      object-fit: contain;
     }
 
     .footer {
       width: 100%;
       background-color: #484444;
       color: #333;
-      padding: 70px;
+      padding: 3%;
       text-align: center;
       font-size: 1rem;
-      position: absolute;
-      bottom: 0;
     }
 
     .search-box {
       text-align: center;
       width: 100%;
       max-width: 600px;
-      margin-top: 100px;
-    }
-
-    h1 {
-      font-size: 2rem;
-      color: #333;
-      margin-bottom: 1rem;
-      font-family: 'Arial', cursive;
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
     }
 
     .search-form {
       display: flex;
       width: 100%;
+      max-width: 600px;
     }
 
     .search-input {
-      width: 100%;
-      padding: 10px;
-      font-size: 1rem;
-      border: 3px solid red;
-      border-radius: 4px 0 0 4px;
+      flex: 1;
+      padding: 15px; /* Adjust padding as needed */
+      font-size: 1.2rem; /* Adjust font size as needed */
+      border: 1px solid #ddd;
+      border-radius: 5px 0 0 5px;
     }
 
     .search-button {
-      padding: 10px 20px;
-      font-size: 1rem;
-      background-color: #4caf50;
-      color: white;
+      padding: 15px 30px; /* Adjust padding as needed */
+      font-size: 1.2rem; /* Adjust font size as needed */
       border: none;
-      border-radius: 0 4px 4px 0;
+      border-radius: 0 5px 5px 0;
+      background-color: #d32f2f;
+      color: white;
       cursor: pointer;
     }
 
-    .search-button:hover {
-      background-color: #45a049;
-    }
-
-    .info-box {
-      background-color: #e0e0e0;
-      padding: 20px;
+    .scrollable-queries {
+      max-height: 150px; /* Adjust height as needed */
+      overflow-y: auto;
       margin-top: 20px;
       width: 100%;
-      max-width: 500px;
-      border-radius: 4px;
+    }
+
+    .popular-queries {
+      width: 100%;
+      border-collapse: collapse;
+    }
+
+    .popular-queries td {
+      background-color: #ffffff;
+      border: 1px solid #ddd;
+      padding: 10px;
       text-align: left;
     }
 
-    .info-box h2 {
-      margin-top: 0;
-      font-size: 1.5rem;
-      color: #333;
+    .info-box {
+      margin-top: 20px;
+      padding: 20px;
+      background-color: #e0e0e0;
+      border: 1px solid #ddd;
+      width: 80%;
+      margin-left: auto;
+      margin-right: auto;
     }
 
-    .info-box p {
-      margin: 10px 0 0;
-      font-size: 1rem;
-      color: #555;
+    h1 {
+      font-size: 2rem;
+      color: #333;
     }
   </style>
   <script>
@@ -113,22 +138,40 @@
   </script>
 </head>
 <body>
-  <div class="header">Rensselaer</div>
-  <div class="header">Rensselaer</div>
-  
-  <div class="search-box">
-    <h1>Simple Search Engine</h1>
-    <form class="search-form" onsubmit="navigateToResultsPage(); return false;">
-      <input type="text" name="q" class="search-input" placeholder="Search the web...">
-      <button type="submit" class="search-button">Search</button>
-    </form>
-  </div>
+  <div class="container">
+    <div class="header">
+      <img src="https://th.bing.com/th/id/R.672dbd113f0892e02c650da86d920af8?rik=u8DcRYYrAczqbw&pid=ImgRaw&r=0" alt="Rensselaer Crest">
+      Rensselaer
+    </div>
+    
+    <div class="search-box">
+      <h1>Simple Search Engine</h1>
+      <form class="search-form" onsubmit="navigateToResultsPage(); return false;">
+        <input type="text" name="q" class="search-input" placeholder="Search the web...">
+        <button type="submit" class="search-button">Search</button>
+      </form>
+      <div class="scrollable-queries">
+        <table class="popular-queries">
+          <tr><td>Query 1</td></tr>
+          <tr><td>Query 2</td></tr>
+          <tr><td>Query 3</td></tr>
+          <tr><td>Query 4</td></tr>
+          <tr><td>Query 5</td></tr>
+          <tr><td>Query 6</td></tr>
+          <tr><td>Query 7</td></tr>
+          <tr><td>Query 8</td></tr>
+          <tr><td>Query 9</td></tr>
+          <tr><td>Query 10</td></tr>
+        </table>
+      </div>
+    </div>
 
-  <div class="info-box">
-    <h2>WHAT AM I SEARCHING?</h2>
-    <p>This search engine helps users quickly find RPI-specific resources, including faculty profiles, campus services, academic programs, and research. Tailored for the RPI community, it provides fast, relevant results for access to RPI's digital content.</p>
-  </div>
+    <div class="info-box">
+      <h2>WHAT AM I SEARCHING?</h2>
+      <p>This search engine helps users quickly find RPI-specific resources, including faculty profiles, campus services, academic programs, and research. Tailored for the RPI community, it provides fast, relevant results for access to RPI's digital content.</p>
+    </div>
 
-  <div class="footer"></div>
+    <div class="footer">Footer Content</div>
+  </div>
 </body>
 </html>
