--- a/results.html
+++ b/results.html
@@ -3,87 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="results.css">
   <title>Search Results</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      margin: 0;
-      background-color: #f8f9fa;
-      text-align: center;
-    }
-
-    .header {
-      width: 100%;
-      background-color: #d32f2f;
-      color: white;
-      padding: 40px;
-      text-align: center;
-      font-size: 1.5rem;
-      font-family: 'Arial', cursive;
-      position: fixed;
-      top: 0;
-    }
-
-    .footer {
-      width: 100%;
-      background-color: #484444;
-      color: #333;
-      padding: 30px;
-      text-align: center;
-      font-size: 1rem;
-      position: fixed;
-      bottom: 0;
-    }
-
-    .content {
-      margin-top: 80px;
-      padding: 20px;
-      width: 100%;
-      max-width: 800px;
-    }
-
-    h1 {
-      color: #333;
-    }
-
-    .query-text {
-      color: #555;
-      font-style: italic;
-    }
-
-    .result {
-      text-align: left;
-      margin: 20px 0;
-      padding: 10px;
-      background-color: #fff;
-      border: 1px solid #ddd;
-      border-radius: 4px;
-    }
-
-    .result-title {
-      color: #1a0dab;
-      font-size: 1.2rem;
-      margin: 0;
-    }
-
-    .result-url {
-      color: #006621;
-      font-size: 0.9rem;
-      margin: 5px 0;
-      text-decoration: none;
-    }
-
-    .result-description {
-      color: #545454;
-      font-size: 0.95rem;
-    }
-  </style>
 </head>
+
 <body>
-  <div class="header">Rensselaer</div>
+  
+  <div class="header">
+    <img src="https://th.bing.com/th/id/R.672dbd113f0892e02c650da86d920af8?rik=u8DcRYYrAczqbw&pid=ImgRaw&r=0" alt="Rensselaer Crest">
+    Rensselaer Polytechnic Institute
+  </div>
+
+    <form class="search-form" onsubmit="navigateToResultsPage(); return false;">
+      <input type="text" name="q" class="search-input" placeholder="Search the web...">
+      <button type="submit" class="search-button">Search</button>
+    </form>
 
   <div class="content">
     <h1>Search Results</h1>
